issue : fixed the alignemnt for the social icons

--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -109,8 +109,15 @@ a {
   border-radius: 50%;
   align-items: center;
 
-  img {
-    width: 50%;
+  .link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+
+    img {
+      width: 50%;
+    }
   }
 }
 
